<resources>
    <string name="app_name">Assignment 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cardio</string>
    <string name="menu_gallery">Workout List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_alert">Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minute_picker">Minutes</string>
    <string name="set_duration">Set Duration</string>
    <string name="begin_workout">BEGIN WORKOUT</string>
</resources>