<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assignment2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_timePickerFragment"
            app:destination="@id/timePickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.assignment2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.assignment2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/timePickerFragment"
        android:name="com.example.assignment2.ui.home.TimePickerFragment"
        tools:layout="@layout/fragment_time_picker" >
        <argument
            android:name="exerciseType"
            app:argType="string" />
        <action
            android:id="@+id/action_timePickerFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment"/>
    </fragment>
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.example.assignment2.ui.home.ExerciseFragment"
        android:label="fragment_exercise"
        tools:layout="@layout/fragment_exercise" >
        <argument
            android:name="exerciseType"
            app:argType="string" />
        <argument
            android:name="duration"
            app:argType="integer" />
    </fragment>
</navigation>